--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.6.0",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.4.0",
     "axios": "^1.7.2",
     "expo": "~51.0.17",
     "expo-camera": "^15.0.12",
@@ -18,7 +19,8 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-gesture-handler": "^2.17.1",
-    "react-native-reanimated": "^3.13.0"
+    "react-native-reanimated": "^3.13.0",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
