--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "axios": "^1.7.2",
     "expo": "~51.0.17",
     "expo-camera": "^15.0.12",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.17.1",
     "react-native-reanimated": "^3.13.0",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
